# rust_auth

./: .gitignore  Cargo.toml
demo_frontend/: middleware.js  package-lock.json  package.json
demo_frontend/app/: page.js
demo_frontend/app/admin/: page.js
demo_frontend/app/api/login/: route.js
demo_frontend/app/api/refresh/: route.js
demo_frontend/app/api/signup/: route.js
demo_frontend/app/login/: page.js
demo_frontend/app/signup/: page.js
demo_frontend/app/user/: page.js
src/: auth.rs  error.rs  main.rs
