[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.39"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
thiserror = "2.0.9"
ring = "0.17.8"
pem = "3.0.4"
anyhow = "1.0.95"
base64 = "0.22.1"
mongodb = "3.1.1"
uuid = "1.11.0"
bcrypt = "0.16.0"
dotenv = "0.15.0"
